fixed alignment issue when downloading as a pdf

--- a/frontend/frontend/src/components/resumeform_steps/resumeview.module.css
+++ b/frontend/frontend/src/components/resumeform_steps/resumeview.module.css
@@ -18,6 +18,7 @@
     margin-bottom: 20px;
     color: black;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
 }
 
 .viewBtn {
